--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,6 @@ android {
     }
 
     productFlavors {
-        flavor1 {
-        }
-        flavor2 {
-            proguardFile 'some-other-rules.txt'
-        }
     }
 }
 
@@ -33,6 +28,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:7.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.google.android.gms:play-services-location:6.5.+'
-    compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: '/libs', include: 'Parse-*.jar')
+    compile files('src/main/res/libs/Parse-1.9.1.jar')
+    compile files('src/main/res/libs/bolts-android-1.2.0.jar')
 }
