--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
     <application
         android:name=".ParseNotification"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/firewall"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -102,7 +102,7 @@
             </intent-filter>
         </receiver>
 
-        <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/firewall"/>
+        <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/not"/>
     </application>
 
 </manifest>
